--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,6 +40,13 @@
     <% else %>
       <%= webpack_entrypoint_stylesheet_tags 'main' %>
     <% end %>
+
+    <% if (yield :javascripts).present? %>
+      <link href="https://fonts.googleapis.com/css?family=Raleway:300" rel="stylesheet">
+    <% else %>
+      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <% end %>
+
     <% if Rails.env.development? %>
       <style>
         .translation_missing {
@@ -47,7 +54,6 @@
         }
       </style>
     <% end %>
-    <link href="https://fonts.googleapis.com/css?family=Raleway:300" rel="stylesheet">
 
     <%= render 'third_party_javascripts' %>
   </head>
