--- a/app/views/shared/_bottom_landscape.html.erb
+++ b/app/views/shared/_bottom_landscape.html.erb
@@ -4,6 +4,14 @@
   <div class="absolute -mx-32 t:mx-0 h-full t:w-full">
     <%= image_tag webpack_asset_path('images/illustrations/prefooter/ground.svg'), class: 'w-full h-full', alt: '' %>
   </div>
-  <%= image_tag webpack_asset_path('images/illustrations/prefooter/left.png'), class: 'absolute right-1/2 d:right-auto d:left-0 h-full max-w-none', alt: '' %>
-  <%= image_tag webpack_asset_path('images/illustrations/prefooter/right.png'), class: 'absolute left-1/2 d:left-auto d:right-0 h-full max-w-none', alt: '' %>
+  <%= image_tag webpack_asset_path('images/illustrations/prefooter/left-1x.png'),
+    srcset: { 
+      webpack_asset_path('images/illustrations/prefooter/left-2x.png') => "2x"
+    },
+    class: 'absolute right-1/2 d:right-auto d:left-0 h-full max-w-none', alt: '' %>
+  <%= image_tag webpack_asset_path('images/illustrations/prefooter/right-1x.png'),
+    srcset: { 
+      webpack_asset_path('images/illustrations/prefooter/right-2x.png') => "2x"
+    },
+    class: 'absolute left-1/2 d:left-auto d:right-0 h-full max-w-none', alt: '' %>
 </div>
