Fix illustration offset bug
The grass in the hero and prefooter illustrations were imporperly offset, however issue was only present in Chrome browsers.

--- a/app/views/shared/_bottom_landscape.html.erb
+++ b/app/views/shared/_bottom_landscape.html.erb
@@ -1,7 +1,7 @@
 <div class="relative overflow-x-hidden w-full h-48 t:h-64">
   <%= image_tag webpack_asset_path('images/illustrations/prefooter/behind_left.png'), class: 'absolute right-1/2 d:right-auto d:left-0 h-full max-w-none', alt: '' %>
   <%= image_tag webpack_asset_path('images/illustrations/prefooter/behind_right.png'), class: 'absolute left-1/2 d:left-auto d:right-0 h-full max-w-none', alt: '' %>
-  <div class="absolute -mx-32 t:mx-0 h-full t:w-full">
+  <div class="absolute h-full w-full">
     <%= image_tag webpack_asset_path('images/illustrations/prefooter/ground.svg'), class: 'w-full h-full', alt: '' %>
   </div>
   <%= image_tag webpack_asset_path('images/illustrations/prefooter/left-1x.png'),
