--- a/app/views/home/show_new.html.erb
+++ b/app/views/home/show_new.html.erb
@@ -52,7 +52,7 @@
           style: 'margin-right: -120px', alt: '' %>
       </div>
     </div>
-    <div class="absolute -mx-32 t:mx-0 h-full t:w-full">
+    <div class="absolute h-full w-full">
       <%= image_tag webpack_asset_path('images/illustrations/hero/horizon.svg'), class: 'w-full h-full', alt: '' %>
     </div>
     <div class="absolute h-full w-full">
