Replace Font Awesome icons with Material icons
Notes:

* The old templates have not had their icons replaced
* As Material Icons doesn't include social media icons, social icons have not been replaced.

--- a/app/assets/main/components/lists.scss
+++ b/app/assets/main/components/lists.scss
@@ -13,8 +13,8 @@
 
 .list-check {
   li::before {
-    font-family: FontAwesome;
-    content: "\f00c";
+    font-family: "Material Icons Round";
+    content: "check";
     font-size: 1.5rem;
 
     @apply
