--- a/app/views/about/faq/show.html.erb
+++ b/app/views/about/faq/show.html.erb
@@ -35,7 +35,7 @@
               <h3 class="heading">
                   <%= question[:question] %>
               </h3>
-              <span class="fa fa-chevron-down transform toggler-checked:rotate-180 transition-transform duration-200"></span>
+              <span class="material-icons-round transform toggler-checked:rotate-180 transition-transform duration-200">expand_more</span>
             </label>
 
             <div class="hidden toggler-checked:block">
