--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,7 +44,7 @@
     <% if (yield :javascripts).present? %>
       <link href="https://fonts.googleapis.com/css?family=Raleway:300" rel="stylesheet">
     <% else %>
-      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet">
     <% end %>
 
     <% if Rails.env.development? %>
