--- a/app/views/home/show_new.html.erb
+++ b/app/views/home/show_new.html.erb
@@ -153,6 +153,75 @@
   </div>
 </section>
 
+<section class="section-padding" data-controller="carousel">
+  <h2 class="heading-lg text-center mb-12"><%= t 'views.welcome.index.community.heading' %></h2>
+
+  <div class="callout flex items-center h-176 m-lg:160 t:h-112 d:h-96 m-lg:max-w-3/4 mx-auto t:max-w-full d:max-w-3/4">
+    <% people = [
+          {
+            name: 'Annelie Pompe',
+            key: 'annelie',
+            image_url: 'images/community/annelie.jpg'
+          },
+          {
+            name: 'Lydia Watchefo',
+            key: 'lydia',
+            image_url: 'images/community/lydia.jpg'
+          },
+          {
+            name: 'Mattias Falkehag',
+            key: 'mattias',
+            image_url: 'images/community/mattias.jpg'
+          },
+          {
+            name: 'Shelbi Lee',
+            key: 'shelbi',
+            image_url: 'images/community/shelbi.png'
+          }
+        ]
+        people.each do |person| %>
+          <div class="hidden t:h-full flex-col t:flex-row items-center space-y-6 t:space-y-0 t:space-x-12 transition duration-500 ease-in-out"
+            data-target="carousel.slide"
+            data-active-class="t:h-full flex flex-col t:flex-row items-center space-y-6 t:space-y-0 t:space-x-12 transition duration-500 ease-in-out"
+            data-inactive-class="hidden t:h-full flex-col t:flex-row items-center space-y-6 t:space-y-0 t:space-x-12 transition duration-500 ease-in-out"
+          >
+            <div class="w-3/4 m-lg:w-1/2 t:w-1/3">
+              <div class="pb-full relative overflow-hidden rounded-full">
+                <%= image_tag webpack_asset_path(person[:image_url]), class: 'absolute top-0 w-full h-full object-cover', alt: "" %>
+              </div>
+            </div>
+            <div class="t:w-2/3 space-y-3">
+              <div class="text-3xl">
+                <i class="fa fa-quote-right" aria-hidden="true"></i>
+              </div>
+              <p class="text-lg">”<%= t("views.welcome.index.community.people.#{person[:key]}.quote") %>”</p>
+              <p class="font-semibold text-center t:text-left">&mdash; <%= person[:name] %>, <%= t("views.welcome.index.community.people.#{person[:key]}.title") %></p>
+            </div>
+          </div>
+    <% end %>
+  </div>
+
+  <div class="flex flex-row items-center justify-center space-x-1 d:space-x-2 mt-3">
+    <div class="flex items-center">
+      <button class="button border-none" data-action="click->carousel#previous" aria-label="See previous person"><-</button>
+    </div>
+    <% people.each_with_index do |_p, i| %>
+      <button class="p-2 d:p-1 inline-block"
+        data-action="click->carousel#jumpToSlide"
+        data-index="<%= i %>"
+        aria-label="See person number <%= i %>">
+        <span class="inline-block w-3 h-3 rounded-full border-2 border-gray-accent bg-transparent pointer-events-none"
+          data-target="carousel.slideIndicator"
+          data-active-class="inline-block w-3 h-3 rounded-full border-2 border-primary bg-primary pointer-events-none"
+        ></span>
+      </button>
+    <% end %>
+    <div class="flex items-center">
+      <button class="button border-none" data-action="click->carousel#next" aria-label="See next person">-></button>
+    </div>
+  </div>
+</section>
+
 <section class="section-padding">
   <div class="section-gutter t:flex flex-row items-center">
     <div class="t:w-1/2">
