Instagram links go to new instagram name

--- a/app/views/invoice_certificate_mailer/invoice_certificate_email.text.erb
+++ b/app/views/invoice_certificate_mailer/invoice_certificate_email.text.erb
@@ -15,7 +15,7 @@ Teamet på GoClimate
 
 Följ oss på Facebook! -> https://www.facebook.com/GoClimate/
 
-Följ oss på Instagram! -> https://www.instagram.com/goclimateneutral/
+Följ oss på Instagram! -> https://www.instagram.com/goclimate/
 
 Börja lev ett klimatneutralt liv nu! -> https://www.goclimate.com/se
 
