--- a/app/views/shared/_footer_old.html.erb
+++ b/app/views/shared/_footer_old.html.erb
@@ -8,7 +8,7 @@
           <p class="line-height-small"><%= t('views.shared.footer.short_intro') %></p>
           <ul class="list-unstyled social-media-icons">
             <li><%= link_to raw('<i class="fa fa-2x fa-twitter" aria-hidden="true"></i>'), 'https://twitter.com/GoClimateHQ', target: "_blank" %></li>
-            <li><%= link_to raw('<i class="fa fa-2x fa-instagram" aria-hidden="true"></i>'), 'https://www.instagram.com/goclimateneutral/', target: "_blank" %></li>
+            <li><%= link_to raw('<i class="fa fa-2x fa-instagram" aria-hidden="true"></i>'), 'https://www.instagram.com/goclimate/', target: "_blank" %></li>
             <li><%= link_to raw('<i class="fa fa-2x fa-facebook" aria-hidden="true"></i>'), 'https://www.facebook.com/GoClimate', target: "_blank" %></li>
           </ul>
         </div>
