--- a/app/views/welcome_mailer/welcome_email.html.erb
+++ b/app/views/welcome_mailer/welcome_email.html.erb
@@ -176,7 +176,7 @@ bgcolor="">
     raw(I18n.t('mailers.welcome.regardless_of_how_much',
       blog: link_to(I18n.t('blog').downcase, 'https://www.goclimate.com/blog/'),
       facebook: link_to('Facebook', 'https://www.facebook.com/GoClimate/'),
-      instagram: link_to('Instagram', 'https://www.instagram.com/goclimateneutral/'),
+      instagram: link_to('Instagram', 'https://www.instagram.com/goclimate/'),
       twitter: link_to('Twitter', 'https://twitter.com/GoClimateHQ')
     ))
   %></div>
