--- a/app/views/welcome_mailer/welcome_email.text.erb
+++ b/app/views/welcome_mailer/welcome_email.text.erb
@@ -7,7 +7,7 @@
 <%=t 'mailers.welcome.regardless_of_how_much', facebook: 'Facebook', twitter: 'Twitter', instagram: 'Instagram', blog: I18n.t('blog') %>
 Blog: https://www.goclimate.com/blog/
 Facebook: https://www.facebook.com/GoClimate/
-Instagram: https://www.instagram.com/goclimateneutral/
+Instagram: https://www.instagram.com/goclimate/
 Twitter: https://twitter.com/GoClimateHQ
 
 <%=t 'mailers.welcome.we_are_many' %>
