--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -8,7 +8,7 @@
         <p class="max-w-lg"><%= t('views.shared.footer.short_intro') %></p>
         <ul class="list-none pt-4 flex flex-row space-x-4">
           <li>
-            <%= link_to 'https://www.instagram.com/goclimateneutral/', target: "_blank", rel: "noopener" do %>
+            <%= link_to 'https://www.instagram.com/goclimate/', target: "_blank", rel: "noopener" do %>
               <i class="fa fa-2x fa-instagram" aria-hidden="true"></i>
               <span class="sr-only">GoClimate on Instagram</span>
             <% end %>
