--- a/app/assets/main/index.scss
+++ b/app/assets/main/index.scss
@@ -5,6 +5,7 @@
 @import 'components/button.scss';
 @import 'components/callout.scss';
 @import 'components/collapse.scss';
+@import 'components/credit-card.scss';
 @import 'components/divider.scss';
 @import 'components/dropdown.scss';
 @import 'components/headings.scss';
